# discopt-course

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: _config.yml  _toc.yml  intro.md  references.bib
docs/notebooks/: tutor_course.ipynb
src/discopt/course/: cli.py
src/discopt/course/_claude_assets/commands/course/: lesson.md
src/discopt/course/advanced/24_nn_embedded_minlp/: reading.ipynb
src/discopt/course/advanced/25_robust_optimization/: reading.ipynb
src/discopt/course/advanced/28_bilevel_and_complementarity/: reading.ipynb
src/discopt/course/advanced/29_reformulations_and_symmetry/: reading.ipynb
src/discopt/course/basic/01_intro_to_optimization/: reading.ipynb
tests/: conftest.py  test_cli_tutor.py  test_plugin.py
